@@ -895,6 +895,19 @@ The error is described by <code><em>error</em></code>.
   <dd>config.c, function build_config
   </dl>
 </dl>
+<dt><code><a name="HHCCF067S">
+HHCCF065S Incorrect keyword <em>keyword</em> for the ASN_AND_LX_REUSE statement
+</a></code>
+<dd><dl>
+  <dt>Meaning
+  <dd>The keyword specified for the ASN_AND_LX_REUSE statement is not
+  <em>ENABLE</em> or <em>DISABLE</em>
+  <dt>Action
+  <dd>Correct the error and restart Hercules.
+  <dt>Issued by
+  <dd>bldcfg.c, function build_config
+  </dl>
+</dl>
 <p><center><hr width=15% noshade></center>
 <p>
 If you have a question about Hercules, see the
